[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["Ludeeus <ludeeus@ludeeus.dev>"]
classifiers = [
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
exclude = ['**/__pycache__']
include = ["pytraccar", "pytraccar.*", "LICENCE.md"]
license = "MIT"
description = ""
maintainers = ["Ludeeus <ludeeus@ludeeus.dev>"]
name = "pytraccar"
readme = "README.md"
repository = "https://github.com/ludeeus/pytraccar"
version = "0"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.6"

[tool.poetry.dev-dependencies]
black = "^23.11.0"
isort = "^5.12.0"
frozenlist = "^1.4.0"
mypy = "^1.7.0"
pylint = "^3.0.2"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"

[tool.black]
line-length = 100
target-version = ['py38']
exclude = 'generated'

[tool.isort]
combine_as_imports = true
force_sort_within_sections = true
profile = "black"

[tool.pylint.'MESSAGES CONTROL']
disable = "unsubscriptable-object,duplicate-code"

[tool.coverage.run]
source = ["pytraccar"]
omit = ["example.py", "tests/*"]

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:"]

[tool.pytest]
asyncio_mode = "strict"
